RESOLVED FIXED100313
[V8] DOMData is no longer needed
https://bugs.webkit.org/show_bug.cgi?id=100313
Summary [V8] DOMData is no longer needed
Adam Barth
Reported 2012-10-24 17:33:50 PDT
[V8] DOMData is no longer needed
Attachments
Patch (16.20 KB, patch)
2012-10-24 17:46 PDT, Adam Barth
no flags
Patch for landing (16.22 KB, patch)
2012-10-24 22:03 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-10-24 17:46:32 PDT
Eric Seidel (no email)
Comment 2 2012-10-24 18:17:26 PDT
Comment on attachment 170524 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=170524&action=review LGTM. > Source/WebCore/bindings/v8/V8DOMMap.cpp:91 > + DOMDataStore* store = DOMDataStore::from(v8::Isolate::GetCurrent()); This pattern is confusing to me. It's unclear who owns the object. Perhaps sharedInstanceFor? or lookupForInstance? or even just changing it back to a reference makes it clear that the caller isn't responsible for the memory (or handling null!)
Adam Barth
Comment 3 2012-10-24 22:03:07 PDT
Created attachment 170548 [details] Patch for landing
WebKit Review Bot
Comment 4 2012-10-24 23:07:09 PDT
Comment on attachment 170548 [details] Patch for landing Clearing flags on attachment: 170548 Committed r132447: <http://trac.webkit.org/changeset/132447>
WebKit Review Bot
Comment 5 2012-10-24 23:07:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.