Source/WebCore/bindings/v8/SerializedScriptValue.cpp
@@ -2208,7 +2208,7 @@ SerializedScriptValue::SerializedScriptValue()
 
 static void neuterBinding(void* domObject) 
 {
-    DOMDataList& allStores = DOMDataStore::allStores();
+    DOMDataList& allStores = V8PerIsolateData::current()->allStores();
     for (size_t i = 0; i < allStores.size(); i++) {
         v8::Handle<v8::Object> obj = allStores[i]->domObjectMap().get(domObject);
         if (!obj.IsEmpty())
